cmake_minimum_required(VERSION 3.26)
project(C_programming C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(C_programmi

        c++a2.cpp
        c++a3.c
        c++a4.cpp
        c++a5.c
        c++a6.c
        c++a7.c
        c++a8.c
        c++a9.c
        c++a10.c
        c++a11.c)
